--- a/aluno/planner/index.html
+++ b/aluno/planner/index.html
@@ -14,8 +14,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300,700' rel='stylesheet' type='text/css'>
+
+<link href='https://fonts.googleapis.com/css?family=Nunito:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../componentes/header/styles_header.css">
     <title>Tarefas</title>
+
 </head>
 
 <body>
@@ -142,7 +148,22 @@
                                 </div>
                                 <p>Nome da tarefa</p>
                             </div>
-                            <img src="./img/menu.svg" alt="">
+                            <ul class="nav">
+                                <div class="kebab">
+                                        <figure></figure>
+                                        <figure class="middle"></figure>
+                                        <p class="cross">x</p>
+                                        <figure></figure>
+                           
+
+                                    <ul class="dropdown">
+                                        <li><a href="http://www.g.com">Art</a></li>
+                                        <li><a href="http://www.g.com">Coding</a></li>
+                                        <li><a href="http://www.g.com">Design</a></li>
+                                        <li><a href="http://www.g.com">Web Development</a></li>
+                                    </ul>
+                                </div>
+                            </ul>
                         </div>
 
                         <div class="data-tarefa">
@@ -150,6 +171,7 @@
                             <p>XX/XX/XX</p>
                         </div>
                     </div>
+
 
                     <div class="col-md-12 card-tarefa">
                         <div class="tarefa">
@@ -228,11 +250,6 @@
                         <h1>NOME DO TÓPICO</h1>
                         <div class="menu">
                             <img src="./img/menu.svg" alt="">
-                            <div class="modal-editar-tarefa">
-                                <div class="alterar-cor">
-                                    
-                                </div>
-                            </div>
                         </div>
 
                     </div>
