--- a/professor/usuarios/index.html
+++ b/professor/usuarios/index.html
@@ -178,7 +178,7 @@
             </div>
         </div>
 
-        <button onclick="showModalCriarUsuario(), alterarInputTipoUsuario(), getArrayCursosAluno()" class="button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
+        <button onclick="showModalCriarUsuario(), alterarInputTipoUsuario(), getArrayCursosAluno(), getArrayTurmasAvaliador()" class="button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
 
         <div class="container mt-5 container modal" id="modalInfoUsuario">
             <h1 id="txtNomeUsuarioModal">NOME DO USUÁRIO</h1>
