--- a/instituicao/cursos/turmas/index.html
+++ b/instituicao/cursos/turmas/index.html
@@ -109,9 +109,9 @@
         <h1>CADASTRO DE TURMA</h1>
         <form class="row g-7 form-modal-turma">
 
-            <input id="input-nome-turma" type="text" class="form-control turma">
             <div class="col-md-12 lab-inp">
                 <label for="turma" class="form-label">Turma</label>
+                <input id="input-nome-turma" type="text" class="form-control turma">
             </div>
 
             <div class="col-md-12 lab-inp">
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <button id="button_cadastrar_turma" class="primeiro_botao" type="button">CRIAR TURMA</button>
+                    <button id="button_cadastrar_turma" class="terceiro_botao" type="button">CRIAR TURMA</button>
                 </div>
             </div>
         </form>
