--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -107,10 +107,10 @@
         </button>
     </div>
 
-    <div class="ccontainer modal modal-curso">
+    <div class="col-md-12 container modal modal-curso">
         <h1>CRIAR NOVO CURSO</h1>
-        <form onsubmit="cadastrarCurso()" class="row g-7">
-            <div class="lab-inp">
+        <form onsubmit="cadastrarCurso()" class="col-md-12 row g-7">
+            <div class="col-md-12 lab-inp">
                 <label for="senha-label" class="form-label">Insira o nome desejado para o curso:</label>
                 <input type="text" class="form-control senha-label" id="inputCriarCurso" maxlength="255" required />
             </div>
@@ -128,9 +128,9 @@
         </form>
     </div>
 
-    <div class="ccontainer modal modal-editar">
+    <div class="col-md-12 container modal modal-editar">
         <h1>EDITAR CURSO</h1>
-        <div class="row g-7 icon">
+        <div class="col-md-12 row g-7 icon">
             <div class="lab-inp">
                 <label for="senha-label" class="form-label">Insira o novo nome desejado para o curso:</label>
                 <input id="inputEditarNomeCurso" type="text" class="form-control senha-label" maxlength="255"
@@ -155,7 +155,7 @@
         <h1>DESEJA EXCLUIR ESSE CURSO?</h1>
         <h2>Lembre-se que essa é uma ação irreversível!</h2>
 
-        <div class="buttons">
+        <div class="col-md-6 buttons">
             <div class="col-md-12">
                 <button id="segundo_botao" onclick="exitModalExcluir()" type="button">
                     CANCELAR
