--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -132,9 +132,9 @@
 
       <div class="buttons">
         <div class="col-md-3">
-          <button id="primeiro_botao" type="button">
-            <a href="../../index.html">CANCELAR</a>
-          </button>
+         
+            <a href="../../index.html"> <button id="primeiro_botao" type="button">CANCELAR</button></a>
+          
         </div>
 
         <div class="col-md-3">
