--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -114,9 +114,9 @@
 
       <div class="buttons">
         <div class="col-md-3 primeiro_botao">
-          <button id="segundo_botao" type="submit">
-            <a href="../../../instituicao/index.html">CANCELAR</a>
-          </button>
+        
+            <a href="../../../instituicao/index.html">  <button id="segundo_botao" type="submit">CANCELAR </button></a>
+         
         </div>
         <div class="col-md-3 primeiro_botao">
           <a href="./editar/index.html">
