--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -115,12 +115,15 @@
       <div class="buttons">
         <div class="col-md-3 primeiro_botao">
         
-            <a href="../../../instituicao/index.html">  <button id="segundo_botao" type="submit">CANCELAR </button></a>
+            <a href="../../../instituicao/index.html">
+              <button id="segundo_botao" type="submit">CANCELAR </button>
+            </a>
          
         </div>
         <div class="col-md-3 primeiro_botao">
           <a href="./editar/index.html">
-            <button type="button" id="primeiro_botao">EDITAR</button></a>
+            <button type="button" id="primeiro_botao">EDITAR</button>
+          </a>
         </div>
       </div>
     </form>
