menu hambúrguer colocado nas páginas faltantes de home

--- a/home/index.html
+++ b/home/index.html
@@ -22,13 +22,18 @@
         <a href="./index.html">
             <img src="./images-global/logo-branca.svg" alt="logo" />
         </a>
-        <nav>
+        <nav class="navegacao">
+
+            <input type="checkbox" class="toggle-menu">
+            <div class="hamburguer"></div>
+
             <ul class="nav_links">
                 <li><a href="./index.html">Início</a></li>
                 <li><a href="./produto/index.html">Produto</a></li>
                 <li><a href="./compra/index.html">Planos & Preços</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="./contato/index.html">Contato</a></li>
             </ul>
+
         </nav>
         <nav class="login_adquirir">
             <a href="./login/index.html" class="login_link">Login</a>
@@ -42,7 +47,9 @@
             <h1>NEXUS TCC</h1>
             <h2>A solução que você procurava para a organização do seu projeto.</h2>
             <div class="botao">
-                <p>SAIBA MAIS</p>
+                <a href="./produto/index.html">
+                    <p>SAIBA MAIS</p>
+                </a>
             </div>
         </div>
     </main>
