--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -24,9 +24,9 @@
 
             <ul class="nav_links">
                 <li><a href="../index.html">Início</a></li>
-                <li><a href="#">Produto</a></li>
+                <li><a href="../produto/index.html">Produto</a></li>
                 <li><a href="./index.html">Planos & Preços</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="../contato/index.html">Contato</a></li>
             </ul>
         </nav>
         <nav class="login_adquirir">
