--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -109,7 +109,7 @@
                 <ul class="list-group ul">
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
@@ -121,7 +121,7 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
@@ -133,7 +133,7 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
@@ -145,7 +145,7 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
@@ -157,7 +157,7 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
@@ -169,7 +169,7 @@
 
                     <li class="list-group-item li" onclick="showModalListagem()">
                         <div class="usuario">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
+                            <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
@@ -349,7 +349,7 @@
             </form>
         </div>
 
-        <div class="container mt-5 container modal modal-excluir" id="modal-excluir">
+        <div class="col-md-12 container mt-5 container modal modal-excluir" id="modal-excluir">
             <h1>DESEJA EXCLUIR ESSE USUARIO?</h1>
             <h2>Lembre-se que essa é uma ação irreversível!</h2>
 
