--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -90,13 +90,13 @@
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
-            <p id="p_tema_projeto"></p>
+            <input type="text" name="tema_projeto" id="p_tema_projeto">
         </div>
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
             <div contentEditable="true">
-                <p id="p_descricao_projeto"></p>
+                <input type="text" name="tema_projeto" id="p_descricao_projeto">
             </div>
         </div>
 
@@ -106,19 +106,19 @@
                 <li class="list-group-item li-integrantes"> </ul>
         </div>
 
-        <!-- <div class="cont-orientadores">
+        <div class="cont-orientadores">
             <h1>Orientadores do grupo:</h1>
             <ul id="ul_professores" class=" list-group ul-orientadores">
                 <li class="list-group-item li-orientadores"> </ul>
-        </div> -->
+        </div>
 
-        <!-- <div class="barra_progresso">
+        <div class="barra_progresso">
             <label>Andamento do projeto:</label>
             <div class="progress">
-                <div class="progress-bar progress_bar" role="progressbar" style="width: 90%;" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100">90%</div>
+                <div id="progress-bar" class="progress-bar progress_bar" role="progressbar" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-        </div> -->
+        </div>
 
         <!-- <div class="anexos">
             <div class="documentacao">
@@ -132,6 +132,8 @@
                 <label id="fileList" class="terceiro_botao"></label>
             </div>
         </div> -->
+
+        <button type="submit" onclick="editarGrupo()">SALVAR</button>
     </div>
 
     <script>
