planner-aluno quase finalizado

--- a/instituicao/cursos/turmas/vizualizacao_grupo/index.html
+++ b/instituicao/cursos/turmas/vizualizacao_grupo/index.html
@@ -84,7 +84,7 @@
         </a>
     </header>
 
-    <div class="grupo">
+    <div class="grupo" id="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
             <p>Sistema para gerenciamento de Trabalho de Conclusão de Curso</p>
