--- a/aluno/planner/index.html
+++ b/aluno/planner/index.html
@@ -127,7 +127,7 @@
                         <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt="">
                             Adicionar
                             tarefa</button>
-                        <div class="modal-add-tarefa">
+                        <div class="col-md-12 modal-add-tarefa">
                             <input type="text" class="col-md-10 inserir-tarefa" maxlength="255"
                                 placeholder="Insira o nome da tarefa" required />
                             <input type="date" class="col-md-10 inserir-data-conclusao"
@@ -150,17 +150,19 @@
                             </div>
                             <ul class="nav">
                                 <div class="kebab">
-                                        <figure></figure>
+                                    <div class="pontos">
+                                         <figure></figure>
                                         <figure class="middle"></figure>
                                         <p class="cross">x</p>
                                         <figure></figure>
-                           
+                                    </div>
 
-                                    <ul class="dropdown">
-                                        <li><a href="http://www.g.com">Art</a></li>
-                                        <li><a href="http://www.g.com">Coding</a></li>
-                                        <li><a href="http://www.g.com">Design</a></li>
-                                        <li><a href="http://www.g.com">Web Development</a></li>
+                                    <ul class="dropdown" id="menu">
+                                        <li><img src="./img/alterar-cor.svg" alt=""> Alterar cor <img class="abrir" src="./img/abrir.svg" alt="">
+                                        </li>
+                                        <li><img src="./img/duplicar.svg" alt=""> Duplicar</li>
+                                        <li><img src="./img/mover-para.svg" alt=""> Mover para <img class="abrir" src="./img/abrir.svg" alt=""></li>
+                                        <li><img src="./img/excluir.svg" alt=""> Excluir</li>
                                     </ul>
                                 </div>
                             </ul>
