tela de perfil e edição de perfil do professor responsivas

--- a/professor/perfil/index.html
+++ b/professor/perfil/index.html
@@ -93,13 +93,13 @@
         <img class="profile_image" id="fotoPerfil" src="img/perfil.jpeg" alt="foto de perfil">
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 email-professor">
         <label for="email_professor" class="form-label">E-mail:</label>
         <input id="input_email_professor" type="email" class="form-control email_professor"
           placeholder="xxxxxxxxxxxx@email.com" disabled>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 nome-professor">
         <label for="nome_professor" class="form-label">Nome:</label>
         <input id="nome_professor" type="text" class="form-control nome_professor" placeholder="xxxxxxx xxxxxxx"
           disabled>
