ajustes nas telas de perfil do aluno

--- a/aluno/perfil/index.html
+++ b/aluno/perfil/index.html
@@ -112,7 +112,9 @@
       </div>
       <div class="buttons">
         <div class="col-md-6">
-          <button id="button-editar" class="botao_editar" type="button">EDITAR</button>
+          <a href="./editar/index.html">
+            <button id="button-editar" class="botao_editar" type="button">EDITAR</button>
+          </a>
         </div>
       </div>
 
