menus planner prontos

--- a/aluno/planner/index.html
+++ b/aluno/planner/index.html
@@ -130,23 +130,23 @@
                                 </div>
 
                                 <ul class="dropdown2" id="menu2">
-                                    <li onmouseenter="xx()" onmouseleave="dxx()"><img src="./img/alterar-cor.svg"
-                                            alt=""> Definir cor padrão
-                                            <ul class="child-nav2">
-                                                <div class="child-kebab2">
-                                                    <ul class="child-dropdown2" id="child-menu2">
-                                                        <li><img src="./img/amarelo.svg" alt=""> Amarelo</li>
-                                                        <li><img src="./img/azul.svg" alt=""> Azul</li>
-                                                        <li><img src="./img/laranja.svg" alt=""> Laranja</li>
-                                                        <li><img src="./img/verde.svg" alt=""> Verde</li>
-                                                        <li><img src="./img/vermelho.svg" alt=""> Vermelho</li>
-                                                        <li><img src="./img/rosa.svg" alt=""> Rosa</li>
-                                                        <li><img src="./img/roxo.svg" alt=""> Roxo</li>
-                                                        <li><img src="./img/preto.svg" alt=""> Preto</li>
-                                                    </ul>
-                                                </div>
-                                            </ul>
-                                        <img class="abrir2" src="./img/abrir.svg" alt="">
+                                    <li><img src="./img/alterar-cor.svg" alt="">
+                                        <p>Definir cor padrão</p>
+                                        <ul class="child-nav2">
+                                            <div class="child-kebab2">
+                                                <ul class="child-dropdown2" id="child-menu2">
+                                                    <li><img src="./img/amarelo.svg" alt=""> Amarelo</li>
+                                                    <li><img src="./img/azul.svg" alt=""> Azul</li>
+                                                    <li><img src="./img/laranja.svg" alt=""> Laranja</li>
+                                                    <li><img src="./img/verde.svg" alt=""> Verde</li>
+                                                    <li><img src="./img/vermelho.svg" alt=""> Vermelho</li>
+                                                    <li><img src="./img/rosa.svg" alt=""> Rosa</li>
+                                                    <li><img src="./img/roxo.svg" alt=""> Roxo</li>
+                                                    <li><img src="./img/preto.svg" alt=""> Preto</li>
+                                                </ul>
+                                            </div>
+                                        </ul>
+                                        <img onmouseenter="open()" class="abrir222" src="./img/abrir.svg" alt="">
                                     </li>
 
                                     <li><img src="./img/seta-direita.svg" alt=""> Mover para a direita</li>
@@ -304,38 +304,6 @@
                 <div class="col-md-3 topico">
                     <div class="col-md-12 titulo">
                         <h1>NOME DO TÓPICO</h1>
-                        <ul class="nav2">
-                            <div class="kebab2">
-                                <div class="pontos2">
-                                    <figure></figure>
-                                    <figure class="middle2"></figure>
-                                    <p class="cross2">x</p>
-                                    <figure></figure>
-                                </div>
-
-                                <ul class="dropdown2" id="menu2">
-                                    <li onmouseenter="xx()" onmouseleave="dxx()"><img src="./img/alterar-cor.svg"
-                                            alt=""> Definir cor padrão
-                                        <ul class="child-nav2">
-                                            <div class="child-kebab2">
-                                                <ul class="child-dropdown2" id="child-menu2">
-                                                    <li></li>
-                                                    <li><img src="./img/duplicar.svg" alt=""> Duplicar</li>
-                                                    <li><img src="./img/mover-para.svg" alt=""> Mover para <img
-                                                            class="abrir" src="./img/abrir.svg" alt=""></li>
-                                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                                </ul>
-                                            </div>
-                                        </ul>
-                                        <img class="abrir2" src="./img/abrir.svg" alt="">
-                                    </li>
-
-                                    <li><img src="./img/seta-direita.svg" alt=""> Mover para a direita</li>
-                                    <li><img src="./img/seta-esquerda.svg" alt=""> Mover para a esquerda</li>
-                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                </ul>
-                            </div>
-                        </ul>
                     </div>
 
 
@@ -382,38 +350,6 @@
                 <div class="col-md-3 topico">
                     <div class="col-md-12 titulo">
                         <h1>NOME DO TÓPICO</h1>
-                        <ul class="nav2">
-                            <div class="kebab2">
-                                <div class="pontos2">
-                                    <figure></figure>
-                                    <figure class="middle2"></figure>
-                                    <p class="cross2">x</p>
-                                    <figure></figure>
-                                </div>
-
-                                <ul class="dropdown2" id="menu2">
-                                    <li onmouseenter="xx()" onmouseleave="dxx()"><img src="./img/alterar-cor.svg"
-                                            alt=""> Definir cor padrão
-                                        <ul class="child-nav2">
-                                            <div class="child-kebab2">
-                                                <ul class="child-dropdown2" id="child-menu2">
-                                                    <li></li>
-                                                    <li><img src="./img/duplicar.svg" alt=""> Duplicar</li>
-                                                    <li><img src="./img/mover-para.svg" alt=""> Mover para <img
-                                                            class="abrir" src="./img/abrir.svg" alt=""></li>
-                                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                                </ul>
-                                            </div>
-                                        </ul>
-                                        <img class="abrir2" src="./img/abrir.svg" alt="">
-                                    </li>
-
-                                    <li><img src="./img/seta-direita.svg" alt=""> Mover para a direita</li>
-                                    <li><img src="./img/seta-esquerda.svg" alt=""> Mover para a esquerda</li>
-                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                </ul>
-                            </div>
-                        </ul>
                     </div>
 
 
@@ -472,38 +408,6 @@
                 <div class="col-md-3 topico">
                     <div class="col-md-12 titulo">
                         <h1>NOME DO TÓPICO</h1>
-                        <ul class="nav2">
-                            <div class="kebab2">
-                                <div class="pontos2">
-                                    <figure></figure>
-                                    <figure class="middle2"></figure>
-                                    <p class="cross2">x</p>
-                                    <figure></figure>
-                                </div>
-
-                                <ul class="dropdown2" id="menu2">
-                                    <li onmouseenter="xx()" onmouseleave="dxx()"><img src="./img/alterar-cor.svg"
-                                            alt=""> Definir cor padrão
-                                        <ul class="child-nav2">
-                                            <div class="child-kebab2">
-                                                <ul class="child-dropdown2" id="child-menu2">
-                                                    <li></li>
-                                                    <li><img src="./img/duplicar.svg" alt=""> Duplicar</li>
-                                                    <li><img src="./img/mover-para.svg" alt=""> Mover para <img
-                                                            class="abrir" src="./img/abrir.svg" alt=""></li>
-                                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                                </ul>
-                                            </div>
-                                        </ul>
-                                        <img class="abrir2" src="./img/abrir.svg" alt="">
-                                    </li>
-
-                                    <li><img src="./img/seta-direita.svg" alt=""> Mover para a direita</li>
-                                    <li><img src="./img/seta-esquerda.svg" alt=""> Mover para a esquerda</li>
-                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                </ul>
-                            </div>
-                        </ul>
                     </div>
 
 
@@ -596,38 +500,6 @@
                 <div class="col-md-3 topico">
                     <div class="col-md-12 titulo">
                         <h1>NOME DO TÓPICO</h1>
-                        <ul class="nav2">
-                            <div class="kebab2">
-                                <div class="pontos2">
-                                    <figure></figure>
-                                    <figure class="middle2"></figure>
-                                    <p class="cross2">x</p>
-                                    <figure></figure>
-                                </div>
-
-                                <ul class="dropdown2" id="menu2">
-                                    <li onmouseenter="xx()" onmouseleave="dxx()"><img src="./img/alterar-cor.svg"
-                                            alt=""> Definir cor padrão
-                                        <ul class="child-nav2">
-                                            <div class="child-kebab2">
-                                                <ul class="child-dropdown2" id="child-menu2">
-                                                    <li></li>
-                                                    <li><img src="./img/duplicar.svg" alt=""> Duplicar</li>
-                                                    <li><img src="./img/mover-para.svg" alt=""> Mover para <img
-                                                            class="abrir" src="./img/abrir.svg" alt=""></li>
-                                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                                </ul>
-                                            </div>
-                                        </ul>
-                                        <img class="abrir2" src="./img/abrir.svg" alt="">
-                                    </li>
-
-                                    <li><img src="./img/seta-direita.svg" alt=""> Mover para a direita</li>
-                                    <li><img src="./img/seta-esquerda.svg" alt=""> Mover para a esquerda</li>
-                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                </ul>
-                            </div>
-                        </ul>
                     </div>
 
 
@@ -672,38 +544,6 @@
                 <div class="col-md-3 topico">
                     <div class="col-md-12 titulo">
                         <h1>NOME DO TÓPICO</h1>
-                        <ul class="nav2">
-                            <div class="kebab2">
-                                <div class="pontos2">
-                                    <figure></figure>
-                                    <figure class="middle2"></figure>
-                                    <p class="cross2">x</p>
-                                    <figure></figure>
-                                </div>
-
-                                <ul class="dropdown2" id="menu2">
-                                    <li onmouseenter="xx()" onmouseleave="dxx()"><img src="./img/alterar-cor.svg"
-                                            alt=""> Definir cor padrão
-                                        <ul class="child-nav2">
-                                            <div class="child-kebab2">
-                                                <ul class="child-dropdown2" id="child-menu2">
-                                                    <li></li>
-                                                    <li><img src="./img/duplicar.svg" alt=""> Duplicar</li>
-                                                    <li><img src="./img/mover-para.svg" alt=""> Mover para <img
-                                                            class="abrir" src="./img/abrir.svg" alt=""></li>
-                                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                                </ul>
-                                            </div>
-                                        </ul>
-                                        <img class="abrir2" src="./img/abrir.svg" alt="">
-                                    </li>
-
-                                    <li><img src="./img/seta-direita.svg" alt=""> Mover para a direita</li>
-                                    <li><img src="./img/seta-esquerda.svg" alt=""> Mover para a esquerda</li>
-                                    <li><img src="./img/excluir.svg" alt=""> Excluir</li>
-                                </ul>
-                            </div>
-                        </ul>
                     </div>
 
 
