INTEGRAÇÃO PROFESSOR CADASTRA ALUNO E AVALIADOR CONCLUÍDA

--- a/professor/usuarios/index.html
+++ b/professor/usuarios/index.html
@@ -475,7 +475,7 @@
                     </button>
 
                     <div class="col-md-12">
-                        <button class="segundo_botao" type="submit" id="salvarAvaliador" onclick="cadastrarAluno()">
+                        <button class="segundo_botao" type="submit" id="salvarAvaliador" onclick="cadastrarAvaliador()">
                             SALVAR
                     </button>
 
