arrumando botoões do form de criar usuário na visão do professor

--- a/professor/usuarios/index.html
+++ b/professor/usuarios/index.html
@@ -470,9 +470,15 @@
                     </div>
 
                     <div class="col-md-3">
-                        <button class="segundo_botao" type="submit" id="saveUser" onclick="cadastrarAluno()">
+                        <button class="segundo_botao" type="submit" id="salvarAluno" onclick="cadastrarAluno()">
                             SALVAR
-                        </button>
+                    </button>
+
+                    <div class="col-md-12">
+                        <button class="segundo_botao" type="submit" id="salvarAvaliador" onclick="cadastrarAluno()">
+                            SALVAR
+                    </button>
+
                     </div>
                 </div>
             </form>
