--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -79,7 +79,7 @@
           <span class="tooltip">Avaliações</span>
       </li>
       <li class="profile">
-          <a href="../../../home/login/index.html">
+          <a onclick="logout()">
               <i class="bx bx-log-out" id="log_out"></i>
               <span class="links_name">Log Out</span>
           </a>
@@ -115,6 +115,7 @@
         <div class="barra_progresso">
             <label>Andamento do projeto:</label>
             <div class="progress">
+                <p id="empty_progress_bar">nenhuma tarefa registrada*</p>
                 <div id="progress-bar" class="progress-bar progress_bar" role="progressbar" aria-valuenow="25"
                     aria-valuemin="0" aria-valuemax="100"></div>
             </div>
